--- a/css/variables.css
+++ b/css/variables.css
@@ -15,6 +15,7 @@
 
 --red-lighter-hover: hsl(3, 77.5%, 93%);
 --red-lighter-active: hsl(3, 77.5%, 91%);
+--red-light-lighter: hsl(2, 78%, 73%);
 
 --blue: hsl(212, 78%, 27%);
 --blue-light: hsl(211, 100%, 64%);
